--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ GMT = "5752ebe1-31b9-557e-87aa-f909b540aa54"
 ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 ImageView = "86fae568-95e7-573e-a6b2-d8a6b900c9ef"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
+LanguageServer = "2b0e0bc5-e4fd-59b4-8912-456d1b03d8d7"
 Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
 LuxCUDA = "d0bbae9a-e099-4d5b-a835-1c6931763bda"
 MLDatasets = "eb30cadb-4394-5ae3-aed4-317e484a6458"
