--- a/configs/test_cases/transonic_cylinder_flow.yml
+++ b/configs/test_cases/transonic_cylinder_flow.yml
@@ -17,8 +17,8 @@ parameter_dimensions:
 
 # Training and test IDs
 training_args:
-  # ids: [3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 32, 33, 34, 35, 36, 37, 38, 39, 40]
-  ids: [10, 11, 12, 13, 14, 15, 16, 17, 18]
+  ids: [3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 32, 33, 34, 35, 36, 37, 38, 39, 40]
+  # ids: [10, 11, 12, 13, 14, 15, 16, 17, 18]
   time_step_info:
     start_time: 1
     num_steps: 60
