--- a/Project.toml
+++ b/Project.toml
@@ -1,50 +1,48 @@
 name = "StochasticInterpolants"
-uuid = "637f3dc3-f457-4b64-a9b7-81a6afe6addd"
-authors = ["nmucke"]
-version = "1.0.0-DEV"
+uuid = "eecb5452-0f11-4f4d-80f4-c346a207514e"
+authors = ["ntm <nmucke@gmail.com>"]
+version = "0.1.0"
 
 [deps]
 ArrayPadding = "fe5ef43c-4912-423d-9170-4bd5cb6a013a"
-Augmentor = "02898b10-1f73-11ea-317c-6393d7073e15"
 BSON = "fbb218c0-5317-5bc6-957e-2ee96dd4b1f0"
-Boltz = "4544d5e4-abc5-4dea-817f-29e4c205d9c8"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
-Comonicon = "863f3e99-da2a-4334-8734-de3dacbe5542"
-DiffEqBase = "2b5f629d-d688-5b77-993f-72d75c75574e"
-DiffEqFlux = "aae7a2af-3d4f-5e19-a356-7da93b79d9d0"
-DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
-GMT = "5752ebe1-31b9-557e-87aa-f909b540aa54"
-ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
-ImageView = "86fae568-95e7-573e-a6b2-d8a6b900c9ef"
-Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
+FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
+GPUArraysCore = "46192b85-c4d5-4398-a991-12ede77f4527"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
-LanguageServer = "2b0e0bc5-e4fd-59b4-8912-456d1b03d8d7"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
 LuxCUDA = "d0bbae9a-e099-4d5b-a835-1c6931763bda"
-MLDatasets = "eb30cadb-4394-5ae3-aed4-317e484a6458"
-MLUtils = "f1d291b0-491e-4a28-83b9-f70985020b54"
-Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 NNlib = "872c559c-99b0-510c-b3b7-b6c96a88d5cd"
 NPZ = "15e1cf62-19b3-5cfa-8e77-841668bca605"
 Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
-PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
-Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Setfield = "efcf1570-3423-57d1-acb7-fd33fddbac46"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
-StochasticDiffEq = "789caeaf-c7a9-5a7d-9973-96adeb23e2a0"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
-julia = "1.10"
-
-[extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-
-[targets]
-test = ["Test"]
+ArrayPadding = "0.1.28"
+BSON = "0.3.9"
+CUDA = "5.4.3"
+FFTW = "1.8.0"
+GPUArraysCore = "0.1.6"
+JSON = "0.21.4"
+LinearAlgebra = "1.11.0"
+Lux = "0.5.64"
+LuxCUDA = "0.3.3"
+NNlib = "0.9.22"
+NPZ = "0.4.3"
+Optimisers = "0.3.3"
+Plots = "1.40.5"
+Printf = "1.11.0"
+ProgressBars = "1.5.1"
+Random = "1.11.0"
+Setfield = "1.1.1"
+Statistics = "1.11.1"
+YAML = "0.4.12"
+Zygote = "0.6.70"
