--- a/configs/test_cases/transonic_cylinder_flow.yml
+++ b/configs/test_cases/transonic_cylinder_flow.yml
@@ -19,12 +19,12 @@ with_mask: true
 
 # Training and test IDs
 training_args:
-  # ids: [3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 32, 33, 34, 35, 36, 37, 38, 39, 40]
-  ids: [9, 10, 11, 12, 13, 19, 20, 21, 22, 23, 24, 25, 26]
+  ids: [3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 32, 33, 34, 35, 36, 37, 38, 39, 40]
+  # ids: [9, 10, 11, 12, 13, 19, 20, 21, 22, 23, 24, 25, 26]
   # ids: [10, 11, 12, 13, 14, 15, 16, 17, 18]
   time_step_info:
     start_time: 1
-    num_steps: 100
+    num_steps: 250
     skip_steps: 2
 
 test_args:
@@ -32,7 +32,7 @@ test_args:
     ids: [0, 1, 2]
     time_step_info:
       start_time: 1
-      num_steps: 60
+      num_steps: 250
       skip_steps: 2
 
   pars_interpolation:
@@ -43,8 +43,8 @@ test_args:
       skip_steps: 2
 
   long_rollouts:
-    # ids: [14, 15]
-    ids: [14]
+    ids: [14, 15]
+    # ids: [14]
     time_step_info:
       start_time: 1
       num_steps: 240
