--- a/Project.toml
+++ b/Project.toml
@@ -7,14 +7,20 @@ version = "0.1.0"
 ArrayPadding = "fe5ef43c-4912-423d-9170-4bd5cb6a013a"
 BSON = "fbb218c0-5317-5bc6-957e-2ee96dd4b1f0"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
+CalculusWithJulia = "a2e0e22d-7d4c-5312-9169-8b992201a882"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
+FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 GPUArraysCore = "46192b85-c4d5-4398-a991-12ede77f4527"
+Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
 LuxCUDA = "d0bbae9a-e099-4d5b-a835-1c6931763bda"
 NNlib = "872c559c-99b0-510c-b3b7-b6c96a88d5cd"
 NPZ = "15e1cf62-19b3-5cfa-8e77-841668bca605"
+NonlinearSolve = "8913a72c-1f9b-4ce2-8d82-65094dcecaec"
 Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
@@ -22,6 +28,7 @@ ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Setfield = "efcf1570-3423-57d1-acb7-fd33fddbac46"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+Tullio = "bc48ee85-29a4-5162-ae0b-a64e1601d4bc"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
@@ -29,14 +36,20 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 ArrayPadding = "0.1.28"
 BSON = "0.3.9"
 CUDA = "5.4.3"
+CalculusWithJulia = "0.2.6"
 FFTW = "1.8.0"
+FileIO = "1.16.3"
+ForwardDiff = "0.10.36"
 GPUArraysCore = "0.1.6"
+Interpolations = "0.15.1"
+JLD2 = "0.5.1"
 JSON = "0.21.4"
 LinearAlgebra = "1.11.0"
 Lux = "0.5.64"
 LuxCUDA = "0.3.3"
 NNlib = "0.9.22"
 NPZ = "0.4.3"
+NonlinearSolve = "3.14.0"
 Optimisers = "0.3.3"
 Plots = "1.40.5"
 Printf = "1.11.0"
@@ -44,5 +57,6 @@ ProgressBars = "1.5.1"
 Random = "1.11.0"
 Setfield = "1.1.1"
 Statistics = "1.11.1"
+Tullio = "0.3.7"
 YAML = "0.4.12"
 Zygote = "0.6.70"
