chore: Update neural network layers and models for Stochastic Interpolants

--- a/Project.toml
+++ b/Project.toml
@@ -18,6 +18,7 @@ JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
 LuxCUDA = "d0bbae9a-e099-4d5b-a835-1c6931763bda"
+MLDatasets = "eb30cadb-4394-5ae3-aed4-317e484a6458"
 NNlib = "872c559c-99b0-510c-b3b7-b6c96a88d5cd"
 NPZ = "15e1cf62-19b3-5cfa-8e77-841668bca605"
 NonlinearSolve = "8913a72c-1f9b-4ce2-8d82-65094dcecaec"
@@ -47,6 +48,7 @@ JSON = "0.21.4"
 LinearAlgebra = "1.11.0"
 Lux = "0.5.64"
 LuxCUDA = "0.3.3"
+MLDatasets = "0.7.18"
 NNlib = "0.9.22"
 NPZ = "0.4.3"
 NonlinearSolve = "3.14.0"
