--- a/configs/test_cases/turbulence_in_periodic_box.yml
+++ b/configs/test_cases/turbulence_in_periodic_box.yml
@@ -1,13 +1,14 @@
 
-data_folder: "data/64_turb"
+# data_folder: "data/periodic_box_turbulence_data.jld2"
+data_folder: "data/periodic_box_turbulence_data_128.jld2"
 
 state_variables:
   - velocity_x
   - velocity_y
 
 state_dimensions:
-  height: 64
-  width: 64
+  height: 128
+  width: 128
   channels: 2
 
 parameter_dimensions:
@@ -16,22 +17,22 @@ with_mask: false
 
 # Training and test IDs
 training_args:
-  ids: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14] 
+  ids: [1, 2, 3, 4, 5, 6, 7, 8, 9, ]
   # ids: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15] 
   #, 29, 30, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 
         # 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80]
   time_step_info:
-    start_time: 1
-    num_steps: 400
+    start_time: 150
+    num_steps: 450
     skip_steps: 4
 
 test_args:
   pars_low:
     # ids: [16, 17, 18, 19, 20]
-    ids: [16]
+    ids: [10]
     time_step_info:
-      start_time: 100
-      num_steps: 150
+      start_time: 400
+      num_steps: 100
       skip_steps: 4
 
 normalize_data: false
