--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,8 @@ FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 GPUArraysCore = "46192b85-c4d5-4398-a991-12ede77f4527"
+IncompressibleNavierStokes = "5e318141-6589-402b-868d-77d7df8c442e"
+Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
@@ -42,6 +44,8 @@ FFTW = "1.8.0"
 FileIO = "1.16.3"
 ForwardDiff = "0.10.36"
 GPUArraysCore = "0.1.6"
+IncompressibleNavierStokes = "1.0.0"
+Infiltrator = "1.8.3"
 Interpolations = "0.15.1"
 JLD2 = "0.5.1"
 JSON = "0.21.4"
