--- a/configs/test_cases/turbulence_in_periodic_box.yml
+++ b/configs/test_cases/turbulence_in_periodic_box.yml
@@ -17,7 +17,7 @@ with_mask: false
 
 # Training and test IDs
 training_args:
-  ids: [1, 2] #, 3, 4, 5, 6, 7, 8, 9]
+  ids: [1, 2, 3, 4, 5, 6, 7, 8, 9]
   time_step_info:
     start_time: 500
     num_steps: 10
