--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 [deps]
 ArrayPadding = "fe5ef43c-4912-423d-9170-4bd5cb6a013a"
 BSON = "fbb218c0-5317-5bc6-957e-2ee96dd4b1f0"
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 CalculusWithJulia = "a2e0e22d-7d4c-5312-9169-8b992201a882"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
@@ -38,6 +39,7 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 [compat]
 ArrayPadding = "0.1.28"
 BSON = "0.3.9"
+BenchmarkTools = "1.5.0"
 CUDA = "5.4.3"
 CalculusWithJulia = "0.2.6"
 FFTW = "1.8.0"
