--- a/configs/test_cases/turbulence_in_periodic_box.yml
+++ b/configs/test_cases/turbulence_in_periodic_box.yml
@@ -17,17 +17,17 @@ with_mask: false
 
 # Training and test IDs
 training_args:
-  ids: [1, 2, 3] #, 4, 5, 6, 7, 8, 9]
+  ids: [1, 2, 3, 4, 5, 6, 7, 8, 9]
   time_step_info:
     start_time: 500
-    num_steps: 100
+    num_steps: 200
     skip_steps: 4
 
 test_args:
   pars_low:
     ids: [10]
     time_step_info:
-      start_time: 500 # 900
+      start_time: 540 # 900
       num_steps: 50
       skip_steps: 4
 
