--- a/trained_models/turbulence_in_periodic_box/forecasting_model_new/neural_network_config.yml
+++ b/trained_models/turbulence_in_periodic_box/forecasting_model_new/neural_network_config.yml
@@ -3,7 +3,7 @@ training_args:
   early_stop_patience: 10
   num_test_paths: 5
   batch_size: 8
-  test_frequency: 50
+  test_frequency: 25
   num_test_sde_steps: 100
   min_learning_rate: 1.0e-6
   num_epochs: 1000
@@ -13,23 +13,27 @@ interpolant_args:
   gamma: "linear"
   beta: "quadratic"
 model_args:
-  embedding_dims: 128
-  attention_type: "DiT"
   use_attention_in_layer:
     - false
     - false
     - false
     - false
-  padding: "periodic"
-  num_heads: 4
   channels:
     - 16
     - 32
     - 64
     - 128
-  attention_embedding_dims: 64
+  in_channels: 2
+  padding: "periodic"
+  out_channels: 2
   len_history: 2
-  projection: ~
+  embedding_dims: 128
+  pars_dim: 0
+  num_heads: 4
+  projection: "divergence_free"
+  attention_type: "standard"
+  attention_embedding_dims: 64
+  model_type: "conv_next_u_net"
 diffusion_args:
   multiplier: 0.1
   type: "follmer_optimal"
