chore: Update .gitignore to ignore mp4 and txt files

--- a/configs/neural_networks/turbulence_in_periodic_box.yml
+++ b/configs/neural_networks/turbulence_in_periodic_box.yml
@@ -1,6 +1,6 @@
 
 training_args:
-  batch_size: 8
+  batch_size: 2
   num_epochs: 1000
   init_learning_rate: 1.0e-4
   min_learning_rate: 1.0e-6
@@ -13,8 +13,8 @@ model_args:
   model_type: "conv_next_u_net"
   in_channels: 2
   out_channels: 2
-  embedding_dims: 128
-  channels: [16, 32, 64, 128]
+  embedding_dims: 64
+  channels: [16, 32, 64]
   attention_type: "standard" # "linear" or "standard" or "DiT"
   use_attention_in_layer: [false, false, false, false] # [true, true, true, true];
   attention_embedding_dims: 64
