--- a/Project.toml
+++ b/Project.toml
@@ -18,23 +18,32 @@ GPUArraysCore = "46192b85-c4d5-4398-a991-12ede77f4527"
 IncompressibleNavierStokes = "5e318141-6589-402b-868d-77d7df8c442e"
 Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
+Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
+JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
+KernelDensity = "5ab0869b-81aa-558d-bb23-cbf5423bbe9b"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+LinearSolve = "7ed4a6bd-45f5-4d41-b270-4a48e9bafcae"
 Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
 LuxCUDA = "d0bbae9a-e099-4d5b-a835-1c6931763bda"
 MLDatasets = "eb30cadb-4394-5ae3-aed4-317e484a6458"
 NNlib = "872c559c-99b0-510c-b3b7-b6c96a88d5cd"
 NPZ = "15e1cf62-19b3-5cfa-8e77-841668bca605"
 NonlinearSolve = "8913a72c-1f9b-4ce2-8d82-65094dcecaec"
+Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
+Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
+OptimizationMOI = "fd9f6733-72f4-499f-8506-86b2bdd0dea1"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 Setfield = "efcf1570-3423-57d1-acb7-fd33fddbac46"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 Tullio = "bc48ee85-29a4-5162-ae0b-a64e1601d4bc"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
@@ -55,23 +64,32 @@ GPUArraysCore = "0.1.6"
 IncompressibleNavierStokes = "1.0.0"
 Infiltrator = "1.8.3"
 Interpolations = "0.15.1"
+Ipopt = "1.7.0"
 JLD2 = "0.5.1"
 JSON = "0.21.4"
+JuMP = "1.23.5"
+KernelDensity = "0.6.9"
 LinearAlgebra = "1.11.0"
+LinearSolve = "2.34.0"
 Lux = "0.5.64"
 LuxCUDA = "0.3.3"
 MLDatasets = "0.7.18"
 NNlib = "0.9.22"
 NPZ = "0.4.3"
 NonlinearSolve = "3.14.0"
+Optim = "1.10.0"
 Optimisers = "0.3.3"
+Optimization = "4.0.5"
+OptimizationMOI = "0.5.1"
 OrderedCollections = "1.7.0"
 Plots = "1.40.5"
 Printf = "1.11.0"
 ProgressBars = "1.5.1"
 Random = "1.11.0"
+Serialization = "1.11.0"
 Setfield = "1.1.1"
 Statistics = "1.11.1"
+StatsPlots = "0.15.7"
 Tullio = "0.3.7"
 UnPack = "1.0.2"
 YAML = "0.4.12"
