--- a/trained_models/kolmogorov/forecasting_model_optimized/neural_network_config.yml
+++ b/trained_models/kolmogorov/forecasting_model_optimized/neural_network_config.yml
@@ -1,34 +1,40 @@
 training_args:
-  init_learning_rate: 0.0001
   early_stop_patience: 10
+  num_warmup_steps: 10
   num_test_paths: 5
   batch_size: 8
-  test_frequency: 5
+  test_frequency: 20
   num_test_sde_steps: 50
   min_learning_rate: 1.0e-6
   num_epochs: 1000
+  max_learning_rate: 0.0001
 interpolant_args:
   gamma_multiplier: 0.1
   alpha: "linear"
   gamma: "linear"
   beta: "quadratic"
 model_args:
-  mlp_ratio: 4
-  dropout_rate: 0.1
+  use_attention_in_layer:
+    - false
+    - false
+    - false
+    - false
   channels:
     - 8
-  depth: 6
-  in_channels: 8
+    - 16
+    - 32
+    - 64
+  in_channels: 2
   padding: "periodic"
-  out_channels: 8
-  embedding_dropout_rate: 0.1
+  out_channels: 2
   len_history: 2
   embedding_dims: 128
-  patch_size: 1
   pars_dim: 0
   num_heads: 4
   projection: ~
-  model_type: "diffusion_transformer"
+  attention_type: "DiT"
+  attention_embedding_dims: 64
+  model_type: "conv_next_u_net"
 diffusion_args:
   multiplier: 0.1
   type: "linear"
