--- a/configs/test_cases/kolmogorov.yml
+++ b/configs/test_cases/kolmogorov.yml
@@ -25,11 +25,11 @@ training_args:
     skip_steps: 2
 
 test_args:
-  pars_low:
+  default:
     ids: [46]
     time_step_info:
       start_time: 1000 # 900
-      num_steps: 250
+      num_steps: 50
       skip_steps: 2
 
 normalize_data: false
