--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 CalculusWithJulia = "a2e0e22d-7d4c-5312-9169-8b992201a882"
+DSP = "717857b8-e6f2-59f4-9121-6e50c889abd2"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
@@ -56,6 +57,7 @@ BenchmarkTools = "1.5.0"
 CSV = "0.10.15"
 CUDA = "5.4.3"
 CalculusWithJulia = "0.2.6"
+DSP = "0.8.0"
 DelimitedFiles = "1.9.1"
 FFTW = "1.8.0"
 FileIO = "1.16.3"
