--- a/configs/neural_networks/kolmogorov.yml
+++ b/configs/neural_networks/kolmogorov.yml
@@ -8,19 +8,19 @@ training_args:
   early_stop_patience: 10
   num_test_paths: 5
   num_test_sde_steps: 50
-  test_frequency: 20
+  test_frequency: 10
 
 model_args:
   model_type: "conv_next_u_net"
   in_channels: 2
   out_channels: 2
   embedding_dims: 128
-  channels: [8, 16, 32, 64]
+  channels: [16, 32, 64, 128]
   attention_type: "DiT" # "linear" or "standard" or "DiT"
-  use_attention_in_layer: [false, false, false, false] # [true, true, true, true];
+  use_attention_in_layer: [false, false, false, false, true] # [true, true, true, true];
   attention_embedding_dims: 64
   num_heads: 4
-  projection: null
+  projection: "divergence_free"
   len_history: 2
   padding: "periodic"
   pars_dim: 0
@@ -35,7 +35,8 @@ interpolant_args:
   beta: "quadratic"
   gamma: "linear"
   gamma_multiplier: 1.0e-1
+  coefs: []
 
 diffusion_args:
-  type: "follmer_optimal"
+  type: "linear"
   multiplier: 1.0e-1
