feat: Update configuration and projection for incompressible flow and Kolmogorov models
- Modified neural network configurations for incompressible flow and Kolmogorov models
- Added new projection method with obstacle for flow simulations
- Updated test case configurations and data loading
- Refined model architectures with attention layers and channel configurations
- Adjusted interpolant and training arguments

--- a/configs/neural_networks/kolmogorov.yml
+++ b/configs/neural_networks/kolmogorov.yml
@@ -20,7 +20,7 @@ model_args:
   use_attention_in_layer: [false, false, false, false, true] # [true, true, true, true];
   attention_embedding_dims: 64
   num_heads: 4
-  projection: "divergence_free"
+  projection: null #"divergence_free"
   len_history: 2
   padding: "periodic"
   pars_dim: 0
