--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.bson
 *.mp4
 *.txt
+*.npz
 
 data/
 
@@ -14,3 +15,6 @@ tmp/
 
 
 later.github/
+
+comparison_figures_for_paper/
+figures_for_paper/
