--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["ntm <nmucke@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+Adapt = "79e6a3ab-5dfb-504d-930d-738a2a938a0e"
 ArrayPadding = "fe5ef43c-4912-423d-9170-4bd5cb6a013a"
 BSON = "fbb218c0-5317-5bc6-957e-2ee96dd4b1f0"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
@@ -12,6 +13,8 @@ CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 CalculusWithJulia = "a2e0e22d-7d4c-5312-9169-8b992201a882"
 DSP = "717857b8-e6f2-59f4-9121-6e50c889abd2"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
+Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
+Divergences = "7f07e4c8-6df2-5971-ad44-bf349b9adcfd"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
@@ -24,6 +27,7 @@ JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 KernelDensity = "5ab0869b-81aa-558d-bb23-cbf5423bbe9b"
+LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearSolve = "7ed4a6bd-45f5-4d41-b270-4a48e9bafcae"
 Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
@@ -43,14 +47,17 @@ ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 Setfield = "efcf1570-3423-57d1-acb7-fd33fddbac46"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 Tullio = "bc48ee85-29a4-5162-ae0b-a64e1601d4bc"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
+WaterLily = "ed894a53-35f9-47f1-b17f-85db9237eebd"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
+Adapt = "4.1.1"
 ArrayPadding = "0.1.28"
 BSON = "0.3.9"
 BenchmarkTools = "1.5.0"
@@ -59,6 +66,8 @@ CUDA = "5.4.3"
 CalculusWithJulia = "0.2.6"
 DSP = "0.8.0"
 DelimitedFiles = "1.9.1"
+Distances = "0.10.12"
+Divergences = "0.3.0"
 FFTW = "1.8.0"
 FileIO = "1.16.3"
 ForwardDiff = "0.10.36"
@@ -71,6 +80,7 @@ JLD2 = "0.5.1"
 JSON = "0.21.4"
 JuMP = "1.23.5"
 KernelDensity = "0.6.9"
+LaTeXStrings = "1.4.0"
 LinearAlgebra = "1.11.0"
 LinearSolve = "2.34.0"
 Lux = "0.5.64"
@@ -90,9 +100,11 @@ ProgressBars = "1.5.1"
 Random = "1.11.0"
 Serialization = "1.11.0"
 Setfield = "1.1.1"
+StaticArrays = "1.9.11"
 Statistics = "1.11.1"
 StatsPlots = "0.15.7"
 Tullio = "0.3.7"
 UnPack = "1.0.2"
+WaterLily = "1.3.0"
 YAML = "0.4.12"
 Zygote = "0.6.70"
