--- a/configs/neural_networks/incompressible_flow.yml
+++ b/configs/neural_networks/incompressible_flow.yml
@@ -8,7 +8,7 @@ training_args:
   early_stop_patience: 10
   num_test_paths: 5
   num_test_sde_steps: 50
-  test_frequency: 5
+  test_frequency: 20
 
 model_args:
   model_type: "conv_next_u_net"
@@ -17,13 +17,13 @@ model_args:
   embedding_dims: 128
   channels: [16, 32, 64, 128]
   attention_type: "DiT" # "linear" or "standard" or "DiT"
-  use_attention_in_layer: [false, false, false, false] # [true, true, true, true];
+  use_attention_in_layer: [false, false, false, false, true] # [true, true, true, true];
   attention_embedding_dims: 64
   num_heads: 4
-  projection: null
+  projection: "projection_with_obstacle"
   len_history: 2
   padding: "periodic"
-  pars_dim: 0
+  pars_dim: 1
 
 optimizer_args:
   learning_rate: 1.0e-4
@@ -35,6 +35,7 @@ interpolant_args:
   beta: "quadratic"
   gamma: "linear"
   gamma_multiplier: 1.0e-1
+  coefs: []
 
 diffusion_args:
   type: "follmer_optimal"
