--- a/trained_models/kolmogorov/forecasting_model_not_optimized_new/neural_network_config.yml
+++ b/trained_models/kolmogorov/forecasting_model_not_optimized_new/neural_network_config.yml
@@ -3,13 +3,14 @@ training_args:
   num_warmup_steps: 10
   num_test_paths: 5
   batch_size: 8
-  test_frequency: 20
+  test_frequency: 10
   num_test_sde_steps: 50
   min_learning_rate: 1.0e-6
   num_epochs: 1000
   max_learning_rate: 0.0001
 interpolant_args:
   gamma_multiplier: 0.1
+  coefs: []
   alpha: "linear"
   gamma: "linear"
   beta: "quadratic"
@@ -19,11 +20,12 @@ model_args:
     - false
     - false
     - false
+    - true
   channels:
-    - 8
     - 16
     - 32
     - 64
+    - 128
   in_channels: 2
   padding: "periodic"
   out_channels: 2
