--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ BSON = "fbb218c0-5317-5bc6-957e-2ee96dd4b1f0"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 CalculusWithJulia = "a2e0e22d-7d4c-5312-9169-8b992201a882"
 DSP = "717857b8-e6f2-59f4-9121-6e50c889abd2"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
@@ -18,14 +19,13 @@ Divergences = "7f07e4c8-6df2-5971-ad44-bf349b9adcfd"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 GPUArraysCore = "46192b85-c4d5-4398-a991-12ede77f4527"
 IncompressibleNavierStokes = "5e318141-6589-402b-868d-77d7df8c442e"
 Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
-Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
-JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 KernelDensity = "5ab0869b-81aa-558d-bb23-cbf5423bbe9b"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -49,9 +49,11 @@ Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 Setfield = "efcf1570-3423-57d1-acb7-fd33fddbac46"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 Tullio = "bc48ee85-29a4-5162-ae0b-a64e1601d4bc"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
+WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
 WaterLily = "ed894a53-35f9-47f1-b17f-85db9237eebd"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
@@ -63,6 +65,7 @@ BSON = "0.3.9"
 BenchmarkTools = "1.5.0"
 CSV = "0.10.15"
 CUDA = "5.4.3"
+CairoMakie = "0.12.18"
 CalculusWithJulia = "0.2.6"
 DSP = "0.8.0"
 DelimitedFiles = "1.9.1"
@@ -71,14 +74,13 @@ Divergences = "0.3.0"
 FFTW = "1.8.0"
 FileIO = "1.16.3"
 ForwardDiff = "0.10.36"
+GLMakie = "0.10.18"
 GPUArraysCore = "0.1.6"
 IncompressibleNavierStokes = "1.0.0"
 Infiltrator = "1.8.3"
 Interpolations = "0.15.1"
-Ipopt = "1.7.0"
 JLD2 = "0.5.1"
 JSON = "0.21.4"
-JuMP = "1.23.5"
 KernelDensity = "0.6.9"
 LaTeXStrings = "1.4.0"
 LinearAlgebra = "1.11.0"
@@ -102,9 +104,11 @@ Serialization = "1.11.0"
 Setfield = "1.1.1"
 StaticArrays = "1.9.11"
 Statistics = "1.11.1"
+StatsBase = "0.34.4"
 StatsPlots = "0.15.7"
 Tullio = "0.3.7"
 UnPack = "1.0.2"
+WGLMakie = "0.10.18"
 WaterLily = "1.3.0"
 YAML = "0.4.12"
 Zygote = "0.6.70"
