--- a/configs/neural_networks/incompressible_flow.yml
+++ b/configs/neural_networks/incompressible_flow.yml
@@ -7,22 +7,22 @@ training_args:
   num_warmup_steps: 10
   early_stop_patience: 10
   num_test_paths: 5
-  num_test_sde_steps: 50
+  num_test_sde_steps: 20
   test_frequency: 20
 
 model_args:
   model_type: "conv_next_u_net"
-  in_channels: 2
-  out_channels: 2
+  in_channels: 3
+  out_channels: 3
   embedding_dims: 128
   channels: [16, 32, 64, 128]
   attention_type: "DiT" # "linear" or "standard" or "DiT"
   use_attention_in_layer: [false, false, false, false, true] # [true, true, true, true];
   attention_embedding_dims: 64
   num_heads: 4
-  projection: "projection_with_obstacle"
+  projection: nothing
   len_history: 2
-  padding: "periodic"
+  padding: "smooth"
   pars_dim: 1
 
 optimizer_args:
